--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -5,7 +5,7 @@
 #   1. Edit the Secret below with your NUS S3 credentials (4 values)
 #   2. Update the Deployment image to your container registry
 #   3. kubectl apply -f deploy.yaml
-#   4. Access at http://<any-node-ip>:30080
+#   4. Access at http://<external-ip>  (get IP from: kubectl get svc -n nkp-gallery-demo)
 ###############################################################################
 
 ---
@@ -22,9 +22,9 @@ metadata:
   namespace: nkp-gallery-demo
 type: Opaque
 stringData:
-  S3_ENDPOINT: "https://your-nus-endpoint.example.com"   # <-- EDIT THIS
-  S3_ACCESS_KEY: "your-access-key"                        # <-- EDIT THIS
-  S3_SECRET_KEY: "your-secret-key"                        # <-- EDIT THIS
+  S3_ENDPOINT: "10.8.21.8"   # <-- EDIT THIS
+  S3_ACCESS_KEY: "7s7nuGMrrjIF5-wAPIzDYRBTNm0f-Ggi"                        # <-- EDIT THIS
+  S3_SECRET_KEY: "VKjMW8XLQeLePNUvqaE-UhO7Mj8kZNNo"                        # <-- EDIT THIS
   S3_BUCKET: "nkp-gallery-demo"                           # <-- EDIT THIS
   S3_REGION: "us-east-1"
   S3_VERIFY_SSL: "false"
@@ -81,13 +81,12 @@ metadata:
   name: gallery-app
   namespace: nkp-gallery-demo
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: gallery-app
   ports:
     - port: 80
       targetPort: 8080
-      nodePort: 30080
 
 # ---
 # # Optional: Uncomment if you have an Ingress Controller configured
